<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:visibility="visible">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            style="@style/OverlayCardView">
            <ImageButton
                android:id="@+id/btn_feedback"
                style="@style/feedbackIcon"
                android:contentDescription="@string/content_desc_feedback"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_dialog_alert" />
        </androidx.cardview.widget.CardView>


        <!--            android:layout_width="52dp - 200dp"-->
        <!--            android:layout_height="52dp - 200dp"-->
        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:visibility="invisible">

            <!--                <SurfaceView-->
            <!--                    android:id="@+id/surfaceView"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="match_parent" />-->
        </FrameLayout>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        style="@style/OverlayCardView"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/view_group_buttons"
            style="@style/OverlayButtonsLayout">

            <ImageButton
                android:id="@+id/btn_tap"
                style="@style/OverlayButton"
                android:contentDescription="@string/content_desc_play_scenario_Tap"
                android:src="@drawable/ic_touch"
                tools:ignore="RedundantDescriptionCheck" />

            <ImageButton
                android:id="@+id/btn_slide"
                style="@style/OverlayButton"
                android:contentDescription="@string/content_desc_play_scenario_Zoom"
                android:src="@drawable/ic_slide" />

            <ImageButton
                android:id="@+id/btn_drag"
                style="@style/OverlayButton"
                android:contentDescription="@string/content_desc_stop_recorder"
                android:src="@drawable/ic_drag" />

            <ImageButton
                android:id="@+id/btn_dismiss"
                style="@style/OverlayButton"
                android:contentDescription="@string/content_desc_stop_clicker"
                android:src="@drawable/ic_stop" />

            <ImageButton
                android:id="@+id/btn_move"
                style="@style/OverlayButton"
                android:contentDescription="@string/content_desc_move_menu"
                android:src="@drawable/ic_move" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>