<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="366dp"
        android:layout_height="509dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_margin="@dimen/margin_horizontal_default"
            android:text="@string/dialog_permissions_header"
            android:textSize="@dimen/text_size_list_item_text" />

        <View style="@style/Separator" />

        <RelativeLayout
            android:id="@+id/item_overlay_permission"
            style="@style/PermissionItemView"
            android:layout_height="109dp">

            <TextView
                android:id="@+id/text_config_overlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/margin_vertical_small"
                android:layout_toStartOf="@id/img_config_overlay_status"
                android:gravity="center_vertical"
                android:text="@string/dialog_permission_overlay"
                android:textSize="@dimen/text_size_list_item_text_big"
                android:textStyle="bold"
                tools:text="@string/dialog_permission_overlay" />

            <TextView
                android:id="@+id/text_config_overlay_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_config_overlay"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/margin_vertical_small"
                android:layout_marginBottom="@dimen/margin_vertical_small"
                android:layout_toStartOf="@id/img_config_overlay_status"
                android:gravity="center_vertical"
                android:text="@string/dialog_permission_overlay_desc"
                android:textSize="@dimen/text_size_list_item_text_small"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/img_config_overlay_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:contentDescription="@string/content_desc_overlay_state"
                android:padding="@dimen/margin_horizontal_small"
                android:scaleType="fitCenter"
                tools:ignore="ImageContrastCheck"
                tools:src="@drawable/ic_confirm"
                tools:tint="@color/primary" />
        </RelativeLayout>

        <View style="@style/Separator" />

        <RelativeLayout
            android:id="@+id/item_accessibility_permission"
            style="@style/PermissionItemView"
            android:layout_height="112dp">

            <TextView
                android:id="@+id/text_config_accessibility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/margin_vertical_small"
                android:layout_toStartOf="@id/img_config_accessibility_status"
                android:gravity="center_vertical"
                android:text="@string/dialog_permission_accessibility"
                android:textSize="@dimen/text_size_list_item_text_big"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_config_accessibility_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_config_accessibility"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/margin_vertical_small"
                android:layout_marginBottom="@dimen/margin_vertical_small"
                android:layout_toStartOf="@id/img_config_accessibility_status"
                android:gravity="center_vertical"
                android:text="@string/dialog_permission_accessibility_desc"
                android:textSize="@dimen/text_size_list_item_text_small"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/img_config_accessibility_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:contentDescription="@string/content_desc_accessibility_state"
                android:padding="@dimen/margin_horizontal_small"
                android:scaleType="fitCenter"
                tools:src="@drawable/ic_cancel"
                tools:tint="@android:color/holo_red_light" />

        </RelativeLayout>

        <View style="@style/Separator" />

        <RelativeLayout
            android:id="@+id/item_camera_permission"
            style="@style/PermissionItemView"
            android:layout_height="112dp">

            <TextView
                android:id="@+id/text_config_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/margin_vertical_small"
                android:layout_toStartOf="@id/img_config_camera_status"
                android:gravity="center_vertical"
                android:text="@string/dialog_permission_camera"
                android:textSize="@dimen/text_size_list_item_text_big"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_config_camera_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_config_camera"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/margin_vertical_small"
                android:layout_marginBottom="@dimen/margin_vertical_small"
                android:layout_toStartOf="@id/img_config_camera_status"
                android:gravity="center_vertical"
                android:text="@string/dialog_permission_camera_desc"
                android:textSize="@dimen/text_size_list_item_text_small"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/img_config_camera_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:contentDescription="@string/content_desc_camera_state"
                android:padding="@dimen/margin_horizontal_small"
                android:scaleType="fitCenter"
                tools:src="@drawable/ic_cancel"
                tools:tint="@android:color/holo_red_light" />

        </RelativeLayout>

        <View style="@style/Separator" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>